# QtAwesome

./: .gitignore  CMakeLists.txt
QtAwesomeSample/: CMakeLists.txt
